[project]
name = "valutatrade_hub"
version = "0.1.0"
description = ""
authors = [
    {name = "BaranovaaPolinaa psweetdeer@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"

[[tool.poetry.packages]]
include = "valutatrade_hub"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.dependencies]
prettytable = "^3.17.0"
ruff = "^0.14.5"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"